# alphax_mis_studio_v7_0_1

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
alphax_mis_designer/: __init__.py  api.py  bi.py  hooks.py  modules.txt  runs.py  visual.py
alphax_mis_designer/api/: datasets.py  export.py  semantic.py
alphax_mis_designer/docs/: admin.md  tour.md
alphax_mis_designer/doctype/mis_column_mapping/: mis_column_mapping.json  mis_column_mapping.py
alphax_mis_designer/doctype/mis_data_model/: mis_data_model.json  mis_data_model.py
alphax_mis_designer/doctype/mis_data_model_metric/: mis_data_model_metric.json  mis_data_model_metric.py
alphax_mis_designer/doctype/mis_dataset/: mis_dataset.json  mis_dataset.py
alphax_mis_designer/doctype/mis_dimension/: mis_dimension.json  mis_dimension.py
alphax_mis_designer/doctype/mis_metric/: mis_metric.json  mis_metric.py
alphax_mis_designer/doctype/mis_report_template/: mis_report_template.json  mis_report_template.py
alphax_mis_designer/doctype/mis_row_mapping/: mis_row_mapping.json  mis_row_mapping.py
alphax_mis_designer/doctype/mis_settings/: mis_settings.json  mis_settings.py
alphax_mis_designer/doctype/mis_visual_template/: mis_visual_template.json  mis_visual_template.py
alphax_mis_designer/utils/: account_matcher.py  accounting_dimensions.py  budget_engine.py  excel_importer.py  exporter.py  gl_engine.py  mapping_suggester.py  mis_settings.py  period_builder.py  runner.py  xlsx_exporter.py  xlsx_importer.py
docs/: architecture.md  installation.md  user_guide.md
(+54 files in other folders)
