[project]
name = "alphax_mis_designer"
version = "7.3.0"
description = "AlphaX MIS Studio - Nuclear (Visual Builder + In-App Tour + BI) for ERPNext v15"
authors = [{name = "Neotec Integrated Solutions"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1.2"]

[build-system]
requires = ["flit_core>=3.8.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "alphax_mis_designer"
